src/objects/Calce_Details__c.object
<CustomObject>
    <fields>
        <fullName>CheckCurrentDate__c</fullName>
        <formula>IF( CurrentDate__c =   close_date__c  , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CheckCurrentDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChildId__c</fullName>
        <formula>opportunity_id__r.Id</formula>
        <label>ChildId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentDate__c</fullName>
        <formula>calce_id__r.Get_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Get_Date_details__c</fullName>
        <formula>calce_id__r.Get_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Get Date details</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HadCanAmount__c</fullName>
        <formula>IF( Opp_amount__c &gt;  amount_cancelled__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HadCanAmount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasChild__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasChild</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opp_amount__c</fullName>
        <formula>opportunity_id__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <formula>Id</formula>
        <label>ParentId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_amount__c</fullName>
        <formula>Opp_amount__c  -  amount_cancelled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TomorrowCalceDetail__c</fullName>
        <formula>close_date__c  + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TomorrowCalceDetail</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_OPP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unique OPP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_contract_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Contract</label>
        <referenceTo>Account_Contract__c</referenceTo>
        <relationshipLabel>Calce Details</relationshipLabel>
        <relationshipName>Calce_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>account_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Client</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Calce Details</relationshipLabel>
        <relationshipName>Calce_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amount_cancelled__c</fullName>
        <label>Amount  Cancelled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>branch__c</fullName>
        <formula>account_id__r.branch_id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>calce_id__c</fullName>
        <label>Calce</label>
        <referenceTo>Calce__c</referenceTo>
        <relationshipLabel>Calce Details</relationshipLabel>
        <relationshipName>Calce_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>close_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>contract_number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>extension__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isToday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isToday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>opportunity_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Calce Details</relationshipLabel>
        <relationshipName>Calce_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>opportunity_stage_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Stage Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>portfolio_fall_balance__c</fullName>
        <formula>amount__c - amount_cancelled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>portfolio fall balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>product_code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Calce Details</relationshipLabel>
        <relationshipName>Calce_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>product_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prueba__c</fullName>
        <defaultValue>false</defaultValue>
        <label>prueba</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>regional__c</fullName>
        <formula>account_id__r.branch_level4_desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>return__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sub_type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>cancelaciones del dia</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Nuevas oportunidades</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Cancelaciones anticipadas</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>Caida de Cartera</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>IF(  TODAY()  =  close_date__c , true, false)</formula>
        <label>test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Calce Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>opportunity_id__c</columns>
        <columns>type__c</columns>
        <columns>close_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calce Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BE_Check_Amount_Cancelled</fullName>
        <active>true</active>
        <description>El monto cancelado no puede ser mayor al monto original asociado al producto</description>
        <errorConditionFormula>IF( Opp_amount__c &lt; amount_cancelled__c , TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>amount_cancelled__c</errorDisplayField>
        <errorMessage>El monto cancelado no puede ser mayor al monto original asociado al producto</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BE_ValidateReturnExtension</fullName>
        <active>true</active>
        <errorConditionFormula>AND( extension__c = true, return__c=true)</errorConditionFormula>
        <errorMessage>No se puede prorrogar y retomar un cancelación al mismo tiempo</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HasCalceDetails</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( IsNew() ,  HasChild__c = true )</errorConditionFormula>
        <errorMessage>error</errorMessage>
    </validationRules>
</CustomObject>